# wewallet

./: Cargo.toml  index.html
.github/workflows/: pages.yml
btc-net-cli/: Cargo.toml
btc-net-cli/src/: lib.rs
src/: app.rs  backend_panel.rs  lib.rs  main.rs
src/widget/: constructor.rs  decoder.rs  mod.rs
