[package]
name = "btc-net-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ehttp = "0.2.0"
tokio = { version = "1.26.0", features = ["sync", "rt", "macros", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.94"
hex = "0.4.3"
anyhow = { version = "1.0", default-features = false }
bitcoin = { version = "0.30.0" }
